2025-03-31  Bart Schaefer  <schaefer@zsh.org>

	* Frank Dana: 53414: Functions/Prompts/prompt_restore_setup:
	attempting to preview the "restore" keyword is nonsensical,
	use a handler function to avoid messing up terminal output

	* Frank Dana: 53413: Functions/Prompts/promptinit: "print -rP"
	in preview, in case of special characters

2025-03-03  Oliver Kiddle  <opk@zsh.org>

	* 53399: Src/Zle/zle_keymap.c, Src/builtin.c, Src/init.c,
	Src/options.c: don't load ZLE early to set keymap

	* 53394: Src/Zle/zle_keymap.c: drop OSC and DCS sequences in key
	input as they are likely to be terminal query responses not keys

2025-03-02  Bart Schaefer  <schaefer@toltec-ubuntu>

	* 53368: Src/options.c: ignore no-op changes to EMACS/VI options

2025-02-28  Oliver Kiddle  <opk@zsh.org>

	* 53395: Completion/Unix/Type/_zfs_dataset,
	Completion/Unix/Command/_zfs:
	complete snapshot ranges for zfs destroy

	* Ronan Pigott: 53393: Completion/Unix/Command/_python,
	Completion/Unix/Command/_python_module-http.server,
	Completion/Unix/Command/_python_module-json.tool,
	Completion/Unix/Command/_python_module-venv:
	Complete python module arguments

2025-02-27  Oliver Kiddle  <opk@zsh.org>

	* github #129: Vadim Misbakh-Soloviov:
	Completion/Unix/Command/_gpg: fix _gpg completion

	* 53378: Doc/Zsh/builtins.yo, Src/Builtins/rlimits.c, configure.ac:
	support new pipebuf resource limit on FreeBSD

2025-02-15  Bart Schaefer  <schaefer@zsh.org>

	* 53363: Src/builtin.c: permit "typeset -n +m pattern"

	* unposted: Src/builtin.c: fix spurious error printing the value
	of a read-only named reference

2025-02-13  Oliver Kiddle  <opk@zsh.org>

	* 53358: Completion/Zsh/Command/_typeset: adapt completion to
	reflect 53348 and extend exclusion lists to cover more + options

2025-02-12  Bart Schaefer  <schaefer@zsh.org>

	* 53360: Src/Zle/complist.c: domenuselect() fails if the previous
	completion did not generate a list (fix for segfault)
